[package]
name = "oreos"
version = "0.1.0"
authors = ["Vyacheslav Pukhanov <vyacheslav.pukhanov@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9.5"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.1"
uart_16550 = "0.2.7"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]